Why Choose Icon Change / Content Add

--- a/about-us.html
+++ b/about-us.html
@@ -135,7 +135,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="col-sm-4">
-                                                <div class="heading">Who are you nerds?</div>
+                                                <div class="heading">Who are you?</div>
                                                 <div class="text">NERDISM - (noun) The practices or behaviors of nerds; nerdiness.</div>
                                                 <div class="text">We are a creative design and development firm in Saint Louis, founded by people who believe that functionality and beauty can be integrated to make something special we can use to further your business or personal brand.</div>
                                             </div>
@@ -192,37 +192,37 @@
                                                     <div class="row">
                                                         <div class="col-sm-4">
                                                             <div data-wow-delay="0.2s" class="box-item box-item-2 wow fadeInUp">
-                                                                <div class="box-icon"><span class="fa fa-bar-chart-o"></span></div>
+                                                                <div class="box-icon"><span class="fa fa-group"></span></div>
                                                                 <div class="box-info">
                                                                     <div class="title">CUSTOMER SERVICE</div>
-                                                                    <div class="text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut peciatis unde omnis.</div>
+                                                                    <div class="text">You are always first . . really. We care about you, and we aren't successful unless you are happy.</div>
                                                                 </div>
                                                             </div>
                                                         </div>
                                                         <div class="col-sm-4">
                                                             <div data-wow-delay="0.2s" class="box-item box-item-2 wow fadeInUp">
-                                                                <div class="box-icon"><span class="fa fa-trophy"></span></div>
+                                                                <div class="box-icon"><span class="fa fa-edit"></span></div>
                                                                 <div class="box-info">
                                                                     <div class="title">CREATIVE DESIGN</div>
-                                                                    <div class="text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut peciatis unde omnis.</div>
+                                                                    <div class="text">We will consult with you to produce the layout, content, graphic design and/or logos or branding that can transform your business or personal brand.</div>
                                                                 </div>
                                                             </div>
                                                         </div>
                                                         <div class="col-sm-4">
                                                             <div data-wow-delay="0.2s" class="box-item box-item-2 wow fadeInUp">
-                                                                <div class="box-icon"><span class="fa fa-paper-plane"></span></div>
+                                                                <div class="box-icon"><span class="fa fa-code"></span></div>
                                                                 <div class="box-info">
                                                                     <div class="title">CUSTOMIZED DEVELOPMENT</div>
-                                                                    <div class="text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut peciatis unde omnis.</div>
+                                                                    <div class="text">We will build, create and maintain your website, application or software . . . and we are really good at it.</div>
                                                                 </div>
                                                             </div>
                                                         </div>
                                                         <div class="col-sm-4">
                                                             <div data-wow-delay="0.2s" class="box-item box-item-2 wow fadeInUp">
-                                                                <div class="box-icon"><span class="fa fa-random"></span></div>
+                                                                <div class="box-icon"><span class="fa fa-share-alt"></span></div>
                                                                 <div class="box-info">
                                                                     <div class="title">SOCIAL MEDIA MANAGEMENT</div>
-                                                                    <div class="text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut peciatis unde omnis.</div>
+                                                                    <div class="text">We create and manage top-performing social media campaigns on Twitter, Facebook, Snapchat and Instagram for your business.</div>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -230,17 +230,17 @@
                                                             <div data-wow-delay="0.2s" class="box-item box-item-2 wow fadeInUp">
                                                                 <div class="box-icon"><span class="fa fa-tachometer"></span></div>
                                                                 <div class="box-info">
-                                                                    <div class="title">SEO OPTIMIZED</div>
-                                                                    <div class="text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. Sed ut peciatis unde omnis.</div>
+                                                                    <div class="title">SEO</div>
+                                                                    <div class="text">We use specific strategies and techniques to increase the amount of visitors to your site, via a high-ranking placement on each search engine.</div>
                                                                 </div>
                                                             </div>
                                                         </div>
                                                         <div class="col-sm-4">
                                                             <div data-wow-delay="0.2s" class="box-item box-item-2 wow fadeInUp">
-                                                                <div class="box-icon"><span class="fa fa-picture-o"></span></div>
+                                                                <div class="box-icon"><span class="fa fa-hand-spock-o"></span></div>
                                                                 <div class="box-info">
                                                                     <div class="title">THE NERDS</div>
-                                                                    <div class="text">We have great people doing great things. We would love to be doing those things for you.</div>
+                                                                    <div class="text">We have special and talented people doing great things. We would love to be doing those things for you.</div>
                                                                 </div>
                                                             </div>
                                                         </div>
