Client quote Add

--- a/about-us.html
+++ b/about-us.html
@@ -265,24 +265,24 @@
                                             <div class="avatar"><img src="assets/img/User-icon.png" alt="" class="img-respsonive"></div>
                                             <div class="line"><span class="dot"></span></div>
                                             <div class="description"><span class="w3-icon">&#10077;</span>
-                                                <div class="text">“ It is a long established fact that a reader will be distracted by the readable con tent of a page nomao when looking at its layout. The point of using Ipsum is that it has a more-or-less normal distribution of letters.”</div>
-                                                <div class="author">Howard K. Stern</div>
+                                                <div class="text">“Our target audience is Males and Females ages zero and up.”</div>
+                                                <div class="author">- very ambitious Coffee Shop Manager</div>
                                             </div>
                                         </div>
                                         <div class="client-item">
                                             <div class="avatar"><img src="assets/img/user-icon-2.png" alt="" class="img-respsonive"></div>
                                             <div class="line"><span class="dot"></span></div>
                                             <div class="description"><span class="w3-icon">&#10077;</span>
-                                                <div class="text">“ It is a long established fact that a reader will be distracted by the readable con tent of a page nomao when looking at its layout. The point of using Ipsum is that it has a more-or-less normal distribution of letters.”</div>
-                                                <div class="author">Howard K. Stern</div>
+                                                <div class="text">“We want it to look like this, but don't copy it. Just make it different enough, but keep it the same.”</div>
+                                                <div class="author">- A Client we really do love</div>
                                             </div>
                                         </div>
                                         <div class="client-item">
                                             <div class="avatar"><img src="assets/img/user-icon-1.png" alt="" class="img-respsonive"></div>
                                             <div class="line"><span class="dot"></span></div>
                                             <div class="description"><span class="w3-icon">&#10077;</span>
-                                                <div class="text">“ It is a long established fact that a reader will be distracted by the readable con tent of a page nomao when looking at its layout. The point of using Ipsum is that it has a more-or-less normal distribution of letters.”</div>
-                                                <div class="author">Howard K. Stern</div>
+                                                <div class="text">“I'll know what I want when I see it.”</div>
+                                                <div class="author">- 40% of the people we talk to . . we don't mind . . really.</div>
                                             </div>
                                         </div>
                                     </div>
