Section Title Changes

--- a/about-us.html
+++ b/about-us.html
@@ -258,7 +258,7 @@
                                 <div class="group-wrapper">
                                     <div class="group-content">
                                         <div class="group-title group-title-5">
-                                            <h2 class="main-title">Client talk about us</h2></div>
+                                            <h2 class="main-title">Client talk</h2></div>
                                     </div>
                                     <div data-wow-delay="0.2s" class="client-slick-2 slick-vertical wow fadeIn">
                                         <div class="client-item">
