--- a/services.html
+++ b/services.html
@@ -327,7 +327,7 @@
                                     </div>
                                     <div class="col-sm-4">
                                         <div class="twitter-widget widget">
-                                            <div class="title-widget">Twitter widget</div>
+                                            <div class="title-widget">Services</div>
                                             <div class="content-widget">
                                                 <div class="recent-list">
                                                     <ul class="list-unstyled">
