Services a to p tag

--- a/services.html
+++ b/services.html
@@ -139,38 +139,38 @@
                                         <div class="row">
                                             <div class="col-sm-4">
                                                 <div data-wow-delay="0.2s" class="service-provide-widget wow fadeIn">
-                                                    <div class="box-icon"><a href="#" class="icons"><i class="alab-ux-ui"></i></a></div><a href="#" class="title">Design</a>
+                                                    <div class="box-icon"><p class="icons"><i class="alab-ux-ui"></i></p></div><p class="title">Design</p>
                                                     <div class="text">We will work with you to take your vision and make it a reality.</div>
                                                 </div>
                                             </div>
                                             <div class="col-sm-4">
                                                 <div data-wow-delay="0.2s" class="service-provide-widget wow fadeIn">
-                                                    <div class="box-icon"><a href="#" class="icons"><i class="alab-web-developing"></i></a></div><a href="#" class="title">Web Development</a>
+                                                    <div class="box-icon"><p class="icons"><i class="alab-web-developing"></i></p></div><p href="#" class="title">Web Development</p>
                                                     <div class="text">We make beautiful sites that are compatible with desktops, laptops, tablets and phones.</div>
                                                 </div>
                                             </div>
                                             <div class="col-sm-4">
                                                 <div data-wow-delay="0.2s" class="service-provide-widget wow fadeIn">
-                                                    <div class="box-icon"><a href="#" class="icons"><i class="alab-threed-studio"></i></a></div><a href="#" class="title">Branding</a>
+                                                    <div class="box-icon"><a href="branding.html" class="icons"><i class="alab-threed-studio"></i></a></div><a href="branding.html" class="title">Branding</a>
                                                     <div class="text">Branding is the face your business shows to the world, and we want it to be the best.</div>
                                                 </div>
                                             </div>
                                             <div class="col-sm-4">
                                                 <div data-wow-delay="0.2s" class="service-provide-widget wow fadeIn">
-                                                    <div class="box-icon"><a href="#" class="icons"><i class="alab-app-development"></i></a></div><a href="#" class="title">App Development</a>
+                                                    <div class="box-icon"><p class="icons"><i class="alab-app-development"></i></p></div><p class="title">App Development</p>
                                                     <div class="text">Bringing your idea to a mobile specific world brings an ease of use to the consumer.</div>
                                                 </div>
                                             </div>
                                             <div class="col-sm-4">
                                                 <div data-wow-delay="0.2s" class="service-provide-widget wow fadeIn">
-                                                    <div class="box-icon"><a href="#" class="icons"><i class="alab-creative-process"></i></a></div><a href="#" class="title">Copywriting</a>
+                                                    <div class="box-icon"><p class="icons"><i class="alab-creative-process"></i></p></div><p class="title">Copywriting</p>
                                                     <div class="text">We deliver the verbal content that accompanies the visual elements.</div>
                                                 </div>
                                             </div>
                                             <div class="col-sm-4">
                                                 <div data-wow-delay="0.2s" class="service-provide-widget wow fadeIn">
-                                                    <div class="box-icon"><a href="#" class="icons"><i class="alab-software"></i></a></div><a href="#" class="title">Software</a>
-                                                    <div class="text">We can design, develop new software, or edit and make existing software better.</div>
+                                                    <div class="box-icon"><p class="icons"><i class="alab-software"></i></p></div><p class="title">Software</p>
+                                                    <div class="text">We can design and develop new software, or edit and make existing software better.</div>
                                                 </div>
                                             </div>
                                             <div class="clearfix"> </div>
