--- a/services.html
+++ b/services.html
@@ -132,7 +132,7 @@
                                     <div class="group-wrapper">
                                         <div class="group-content">
                                             <div class="group-title group-title-5">
-                                                <h2 class="main-title">service that we provide</h2></div>
+                                                <h2 class="main-title">our services</h2></div>
                                         </div>
                                     </div>
                                     <div class="service-provide-wrapper">
