Remove Branding Links

--- a/about-us.html
+++ b/about-us.html
@@ -67,7 +67,6 @@
                                             <ul class="nav-links nav navbar-nav is-hidden">
                                                 <li><a href="index.html" class="main-menu"><span class="text">Home</span></a></li>
                                                 <li><a href="services.html" class="main-menu"><span class="text">Services</span></a></li>
-                                                <li><a href="branding.html" class="main-menu"><span class="text">Branding</span></a></li>
                                                 <li><a href="contact.html" class="main-menu"><span class="text">Contact</span></a></li>
                                             </ul>
                                         </div>
@@ -89,7 +88,6 @@
                                         <ul class="nav-links nav navbar-nav">
                                             <li><a href="index.html" class="main-menu"><span class="text">Home</span></a></li>
                                             <li><a href="services.html" class="main-menu"><span class="text">Services</span></a></li>
-                                            <li><a href="branding.html" class="main-menu"><span class="text">Branding</span></a></li>
                                             <li><a href="contact.html" class="main-menu"><span class="text">Contact</span></a></li>
                                         </ul>
                                     </div>
@@ -141,7 +139,7 @@
                                             </div>
                                             <div class="col-sm-4">
                                                 <div class="heading">What we do?</div>
-                                                <div class="text">We take your idea or existing business and bring it to the world in way that grabs the attention of the consumer, and magnifies your product so you can increase profitability.</div>
+                                                <div class="text">We take your idea or existing business and bring it to the world in way that grabs the attention of the consumer and magnifies your product so you can increase profitability.</div>
                                                 <div class="text">Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip consequat.</div>
                                             </div>
                                             <div class="col-sm-4">
