What and Why Content Add

--- a/about-us.html
+++ b/about-us.html
@@ -140,12 +140,12 @@
                                             <div class="col-sm-4">
                                                 <div class="heading">What we do?</div>
                                                 <div class="text">We take your idea or existing business and bring it to the world in way that grabs the attention of the consumer and magnifies your product so you can increase profitability.</div>
-                                                <div class="text">Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip consequat.</div>
+                                                <div class="text">We believe that humor combined with amazing design and a creative use of technology can make complicated ideas more understandable and products more fun.</div>
                                             </div>
                                             <div class="col-sm-4">
                                                 <div class="heading">Why we do it?</div>
-                                                <div class="text">Consect adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</div>
-                                                <div class="text">Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip consequat.</div>
+                                                <div class="text">We like money and paying our bills on time, and doing it surrounded by people we like and doing things we really love to do.</div>
+                                                <div class="text">That's probably oversimplified, but we do this because we are good at it, and we make a difference in each others lives as well as our clients. We are incredibly lucky people.</div>
                                             </div>
                                         </div>
                                     </div>
