Workflow Content Add

--- a/services.html
+++ b/services.html
@@ -125,6 +125,10 @@
                                 </div>
                             </div>
                         </section>
+
+                        <!--================
+                          OUR SERVICES
+                        ==================-->
                         <section class="service-provide padding-top-100 padding-bottom-100">
                             <div class="box-content-wrap">
                                 <div class="container">
@@ -178,6 +182,10 @@
                                 </div>
                             </div>
                         </section>
+
+                        <!--==================
+                          SERVICES BANNER
+                        ===================-->
                         <section class="banner-adv layout-2">
                             <div class="container">
                                 <div class="box-content-inner"><img src="assets/img/service-1.png" alt="" class="img-responsive">
@@ -214,6 +222,10 @@
                                 </div>
                             </div>
                         </section>
+
+                        <!--============
+                          WORKFLOW
+                        =============-->
                         <section class="working-flow padding-top-100 padding-bottom-100">
                             <div class="box-content-wrap">
                                 <div class="container">
@@ -231,7 +243,7 @@
                                                         <a href="#" class="icons"><img src="assets/img/service-8.jpg" alt="" class="img-responsive"></a>
                                                     </div>
                                                     <div class="working-flow-inner"> <a href="#" class="title">01. Consult</a>
-                                                        <div class="text">Consectetur adipisicing elit, sed do emod tempor incididunt ut labore et dolore is magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
+                                                        <div class="text">We will discuss your needs, your ideas and your expectations while giving you a glimpse of how adorable and charming we are in person.</div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -241,7 +253,7 @@
                                                         <a href="#" class="icons"><img src="assets/img/service-3.jpg" alt="" class="img-responsive"></a>
                                                     </div>
                                                     <div class="working-flow-inner"> <a href="#" class="title">02. Brainstorm</a>
-                                                        <div class="text">Consectetur adipisicing elit, sed do emod tempor incididunt ut labore et dolore is magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
+                                                        <div class="text">We will gather the nerds in our nerd lair and not come out until we have something that will blow you away.</div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -251,7 +263,7 @@
                                                         <a href="#" class="icons"><img src="assets/img/service-5.jpg" alt="" class="img-responsive"></a>
                                                     </div>
                                                     <div class="working-flow-inner"> <a href="#" class="title">03. Design</a>
-                                                        <div class="text">Consectetur adipisicing elit, sed do emod tempor incididunt ut labore et dolore is magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
+                                                        <div class="text">Once the idea is approved, we will design it and make it even more awesome with interactive and responsive design as well as a look and feel that will make it stand out from the competition.</div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -261,7 +273,7 @@
                                                         <a href="#" class="icons"><img src="assets/img/service-4.jpg" alt="" class="img-responsive"></a>
                                                     </div>
                                                     <div class="working-flow-inner"> <a href="#" class="title">04. Development</a>
-                                                        <div class="text">Consectetur adipisicing elit, sed do emod tempor incididunt ut labore et dolore is magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
+                                                        <div class="text">We take the design and make it a reality with code that will make you cry it's so beautiful and well written.</div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -271,7 +283,7 @@
                                                         <a href="#" class="icons"><img src="assets/img/service-2.jpg" alt="" class="img-responsive"></a>
                                                     </div>
                                                     <div class="working-flow-inner"> <a href="#" class="title">05. Testing</a>
-                                                        <div class="text">Consectetur adipisicing elit, sed do emod tempor incididunt ut labore et dolore is magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
+                                                        <div class="text">Through every phase of development we will extensively test and re test until we know for certain that whatever you need functions perfectly without errors or mistakes. Don't get me wrong, we make them, but we also find and fix them before you see it.</div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -281,7 +293,7 @@
                                                         <a href="#" class="icons"><img src="assets/img/service-10.png" alt="" class="img-responsive"></a>
                                                     </div>
                                                     <div class="working-flow-inner"> <a href="#" class="title">06. Launch</a>
-                                                        <div class="text">Consectetur adipisicing elit, sed do emod tempor incididunt ut labore et dolore is magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
+                                                        <div class="text">We spend time to train and discuss with you the in and outs of everything we have done for you, and then we launch it to the public so everyone can see how awesome and great you and your business or product is.</div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -293,7 +305,10 @@
                     </div>
                 </div>
             </div>
-            <!-- FOOTER-->
+
+            <!--===========
+              FOOTER
+            ============-->
             <footer>
                 <div class="footer-wrapper">
                     <div class="footer-main">
