Services Banner Content Add

--- a/services.html
+++ b/services.html
@@ -194,8 +194,8 @@
                                             <div class="box-content-item">
                                                 <div class="box-number"><span class="number">01</span></div>
                                                 <div class="box-content">
-                                                    <div class="title">Simple &amp; Modern</div>
-                                                    <div class="text">Consectetur adipisicing elit, sed do emod tempor incididunt ut labore et dolore is magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
+                                                    <div class="title">Understanding</div>
+                                                    <div class="text">You may not need us. This world is new and constantly evolving, we understand it because we deal with it everyday. You may not be aware that what you need is already out there and fully available to you.</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -203,8 +203,8 @@
                                             <div class="box-content-item">
                                                 <div class="box-number"><span class="number">02</span></div>
                                                 <div class="box-content">
-                                                    <div class="title">So Many Feature</div>
-                                                    <div class="text">Consectetur adipisicing elit, sed do emod tempor incididunt ut labore et dolore is magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
+                                                    <div class="title">Recommendations</div>
+                                                    <div class="text">If what you DO NEED is something you can readily find somewhere else, we will point you in that direction and help you as much as we can free of charge.</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -212,8 +212,8 @@
                                             <div class="box-content-item">
                                                 <div class="box-number"><span class="number">03</span></div>
                                                 <div class="box-content">
-                                                    <div class="title">Super Interactive</div>
-                                                    <div class="text">Consectetur adipisicing elit, sed do emod tempor incididunt ut labore et dolore is magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</div>
+                                                    <div class="title">Fair</div>
+                                                    <div class="text">This isn't just about money . . don't get me wrong, it's a big part . . but we also want to be fair and never take advantage of any person or client. Our decisions impact how we see ourselves and I never want ethical lines crossed purely for profit.</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -273,7 +273,7 @@
                                                         <a href="#" class="icons"><img src="assets/img/service-4.jpg" alt="" class="img-responsive"></a>
                                                     </div>
                                                     <div class="working-flow-inner"> <a href="#" class="title">04. Development</a>
-                                                        <div class="text">We take the design and make it a reality with code that will make you cry it's so beautiful and well written.</div>
+                                                        <div class="text">We take the design and make it a reality with code so beautiful, secure and well written it may make you cry . . maybe that's just me, though. I get emotional. Don't judge.</div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -283,7 +283,7 @@
                                                         <a href="#" class="icons"><img src="assets/img/service-2.jpg" alt="" class="img-responsive"></a>
                                                     </div>
                                                     <div class="working-flow-inner"> <a href="#" class="title">05. Testing</a>
-                                                        <div class="text">Through every phase of development we will extensively test and re test until we know for certain that whatever you need functions perfectly without errors or mistakes. Don't get me wrong, we make them, but we also find and fix them before you see it.</div>
+                                                        <div class="text">Through every phase of development we will extensively test and re-test until we know for certain that whatever you need functions perfectly without errors or mistakes. Don't get me wrong, we make them (it's impossible not to), but we also find and fix them before you see it.</div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -293,7 +293,7 @@
                                                         <a href="#" class="icons"><img src="assets/img/service-10.png" alt="" class="img-responsive"></a>
                                                     </div>
                                                     <div class="working-flow-inner"> <a href="#" class="title">06. Launch</a>
-                                                        <div class="text">We spend time to train and discuss with you the in and outs of everything we have done for you, and then we launch it to the public so everyone can see how awesome and great you and your business or product is.</div>
+                                                        <div class="text">We spend time to train and discuss with you the in-and-outs of everything we have done for you, and then we launch it to the public so everyone can see how awesome and great you and your business or product is.</div>
                                                     </div>
                                                 </div>
                                             </div>
