--- a/contact.html
+++ b/contact.html
@@ -5,19 +5,19 @@
     <title>Nerdism | Contact Us</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- FONT CSS-->
+    <!--==== FONT / ICONS ====-->
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900">
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
     <link type="text/css" rel="stylesheet" href="assets/libs/animate.css/animate.css">
     <link type="text/css" rel="stylesheet" href="assets/font/font-icon/font-awesome/css/font-awesome.css">
     <link type="text/css" rel="stylesheet" href="assets/font/font-icon/alabicon/style.css">
-    <!-- LIBRARY CSS-->
+    <!--==== LIBRARY CSS ====-->
     <link type="text/css" rel="stylesheet" href="assets/libs/bootstrap/css/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="assets/libs/slick-slider/slick.css">
     <link type="text/css" rel="stylesheet" href="assets/libs/slick-slider/slick-theme.css">
     <link type="text/css" rel="stylesheet" href="assets/libs/fancybox/source/helpers/jquery.fancybox-thumbs.css">
     <link type="text/css" rel="stylesheet" href="assets/libs/fancybox/source/jquery.fancybox.css">
-    <!-- STYLE CSS-->
+    <!--==== STYLE CSS ====-->
     <link type="text/css" rel="stylesheet" href="assets/css/layout.css">
     <link type="text/css" rel="stylesheet" href="assets/css/components.css">
     <link type="text/css" rel="stylesheet" href="assets/css/responsive.css">
@@ -25,7 +25,7 @@
 
 <body>
     <div class="body-wrapper">
-        <!-- PAGE LOADER-->
+        <!--==== PAGE LOADER ====-->
         <div class="preload">
             <div class="logo-container"><img src="assets/img/logo-transparent.png" alt="" class="logo">
                 <div class="logo-curtain">
@@ -34,7 +34,9 @@
             </div>
         </div>
         <div class="wrapper-content">
-            <!-- HEADER-->
+            <!--==================
+                HEADER
+            ===================-->
             <header>
                 <div class="bg-secondary header header-in-page">
                     <div class="header-main">
@@ -46,9 +48,11 @@
                                     </div>
                                 </div>
                                 <div class="navbar-header">
+                                    <!-- Logo -->
                                     <div class="logo">
                                         <a href="index.html" class="header-logo"><img src="assets/img/logo.png" alt="" /></a>
                                     </div>
+                                    <!-- /end logo -->
                                 </div>
                                 <nav class="navigation">
                                     <div class="navigation-all">
@@ -167,7 +171,7 @@
                         </section>
                         <!--===========
                           MESSAGE
-                        ==============-->
+                        ==============
                         <section class="contact layout-1">
                                         <div class="container">
                                             <div class="row banner">
@@ -197,10 +201,13 @@
                                             </div>
                                         </div>
                                     </section>
+                                -->
                     </div>
                 </div>
             </div>
-            <!-- FOOTER-->
+            <!--==============
+                FOOTER
+            ================-->
             <footer>
                 <div class="footer-wrapper">
                     <div class="footer-main">
